fix: body style <body/> now always shows a vertical scrollbar. Before adding this, the scrollbar would briefly hide and then show whilst the data was being fetched. This caused the chart container to briefly increase, and then decrease, its width. This then triggered a resize animation on the chart. By keeping the scrollbar always there the chart doesn't resize anymore.

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    overflow-y: scroll;
 }
 
 .uaa-container {
